--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 <center>
-  	<h3> DJ WEB APP
+  	<h3>AI DJ WEB APP
 	    <br>
 	    <span class="note">NOTE - Move your left-hand wrist up and down for increasing and decreasing the volume. 
         Move your right-hand wrist up and down for increasing and decreasing the speed</span>
@@ -29,7 +29,7 @@
       <h3 class="btn btn-danger" id="volume">Volume</h3>
     </div>
 	<br><br>
-  <button class="btn btn-danger btn-lg" class="play_button">Song Name</button>
+  <button class="btn btn-danger btn-lg" class="play_button">Play</button>
 </center>
 
 <script src="main.js"></script>
